[package]
name = "rustive"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["tokio"] }
env_logger = "0.11.8"
log = "0.4.28"
sea-orm = { version = "1.1.17", features = ["runtime-tokio-native-tls", "sqlx-sqlite"] }
sea-orm-migration = { version = "1.1.17", features = ["sqlx-sqlite", "runtime-tokio-native-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
